--- a/package.json
+++ b/package.json
@@ -8,8 +8,13 @@
     "start": "next start"
   },
   "dependencies": {
+    "@tailwindcss/typography": "^0.2.0",
+    "autoprefixer": "^10.0.0",
     "next": "9.5.3",
+    "postcss": "^8.0.7",
+    "postcss-preset-env": "^6.7.0",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "tailwindcss": "^1.8.10"
   }
 }
