--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "postcss-preset-env": "^6.7.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-player": "^2.6.2",
+    "react-youtube-embed": "^1.0.3",
     "tailwindcss": "^1.8.10"
   }
 }
